--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev":"node --watch server.js",
+    "dev": "node --watch server.js",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.3",
+    "multer": "^1.4.5-lts.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
